--- a/ExpressCrashCourse/package.json
+++ b/ExpressCrashCourse/package.json
@@ -7,11 +7,12 @@
     "start": "node index",
     "dev": "nodemon index"
   },
-  "author": "Clement Anthony",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "npm:Express@^3.0.1",
-    "Express": "^3.0.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
