--- a/09-E-Commerce-api/package.json
+++ b/09-E-Commerce-api/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
+    "morgan": "^1.10.0",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.4.0",
     "xss-clean": "^0.1.1",
