--- a/09-E-Commerce-api/package.json
+++ b/09-E-Commerce-api/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.4.0",
+    "validator": "^13.7.0",
     "xss-clean": "^0.1.1",
     "yamljs": "^0.3.0"
   },
