--- a/08-Stripe-payment/package.json
+++ b/08-Stripe-payment/package.json
@@ -19,7 +19,6 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
     "rate-limiter": "^0.2.0",
     "stripe": "^8.167.0",
     "swagger-ui-express": "^4.1.6",
@@ -30,6 +29,6 @@
     "nodemon": "^2.0.9"
   },
   "engines": {
-    "node": "14.x"
+    "node": "16.13.0"
   }
 }
